frontend/uhes-60/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-us60-frontend
  labels:
    kubernetes.io/metadata.name: dev-us60-frontend
    environment: development
    security.policy: baseline
    app.kubernetes.io/part-of: ami-platform
    access.policy: team
    owner: US60-team
    app.kubernetes.io/name: dev-us60-frontend
    istio-injection: enabled
