frontend/uhes-60/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uhes-60-frontend-service
  namespace: dev-us60-frontend
  labels:
    app: uhes-60-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: uhes-60-frontend
